Add logic for updating SUMMARY.md, split out job into reusable workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,23 +32,11 @@ jobs:
       - name: Run bin/create-release
         run: 'GH_TOKEN=${{ secrets.GITHUB_TOKEN }} bin/create-release ${{ github.event.inputs.commit_sha }} ${{ github.event.inputs.release_number }}'
 
-  document_server_environment_variables:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+  update_environment_variable_documentation_markdown:
+    needs: create_release # The generate markdown job relies on the release tag being added, so wait for bin/create-release to complete.
+    uses: ./.github/workflows/generate_env_var_docs_markdown_for_release.yaml
+    with:
+      release_number: ${{ github.event.inputs.release_number }}
+    secrets:
+      AUTOMATION_GITHUB_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.AUTOMATION_GITHUB_BOT_PERSONAL_ACCESS_TOKEN }}
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: bin/env-var-docs-create-venv
-
-      - name: Run bin/env-var-docs-generate-markdown
-        env:
-          LOCAL_OUTPUT: false
-          RELEASE_VERSION: ${{ github.event.inputs.release_number }}
-          GITHUB_ACCESS_TOKEN: ${{ secrets.AUTOMATION_GITHUB_BOT_PERSONAL_ACCESS_TOKEN }}
-          TARGET_REPO: civiform/docs
-          TARGET_PATH: docs/it-manual/sre-playbook/server-environment-variables
-        run: bin/env-var-docs-generate-markdown
